feat: Add logging to authentication middleware

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-PORT=8302
+PORT=8080
 MONDAY_SIGNING_SECRET=829b82026a7bc12181697ac19899ad99
 TUNNEL_SUBDOMAIN=integration-10157119
+MNDY_SERVER_ADDRESS=http://localhost:8080
